<resources>
    <string name="app_name">SafeHajj</string>
    <string name="login">LOGIN</string>
    <string name="Username">Name</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_people">Pilgrims</string>
    <string name="title_account">Account</string>
    <string name="title_settings">Settings</string>
    <string name="no_blood_pressure_data">No data on Blood Pressure</string>
    <string name="no_heart_beat_data">No data on heat beat</string>
    <string name="no_blood_sugar_data">No data on blood sugar level</string>
    <string name="no_distance_data">No data on distance travelled</string>
    <string name="no_calorie_data">No data on calorie</string>
    <string name="title_logout">Logout</string>
</resources>
