<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llHealthView"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width=
                    "match_parent"
                android:layout_height="wrap_content"

                android:text="Blood Pressure "
                android:textSize="17dp"


                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp">
                <TextView
                    android:layout_width=
                        "0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Diastolic :"
                    android:textSize="17dp"

                    style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>
                <TextView
                    android:layout_width=
                        "0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="17dp"
                    android:id="@+id/tvDiastolic"
                    android:text="0.0"
                    style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp">
                <TextView
                    android:layout_width=
                        "0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Shrink :"
                    android:textSize="17dp"
                    style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>
                <TextView
                    android:layout_width=
                        "0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="17dp"
                    android:id="@+id/tvShrink"
                    android:text="0.0"
                    style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>
            </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvErBloodPressure"
            android:text="@string/no_blood_pressure_data"
            android:textColor="@color/red"
            android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">
            <TextView
                android:layout_width=
                    "0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:text="Heart Beat :"
                android:textSize="17dp"

                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="0.0"
                android:textSize="17dp"
                android:id="@+id/tvHeartBeat"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvErHeartBeat"
            android:visibility="gone"
            android:text="@string/no_heart_beat_data"
            android:textColor="@color/red"
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">
            <TextView
                android:layout_width=
                    "0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:text="Blood Sugar :"
                android:textSize="17dp"

                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0.0"
                android:textSize="17dp"
                android:id="@+id/tvBloodSugar"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvErBloodSugar"
            android:text="@string/no_blood_sugar_data"
            android:textColor="@color/red"
            android:visibility="gone"
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">
            <TextView
                android:layout_width=
                    "0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:text="Distance :"
                android:textSize="17dp"

                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="0.0"
                android:textSize="17dp"
                android:id="@+id/tvHealthDistance"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvErDistance"
            android:text="@string/no_distance_data"
            android:textColor="@color/red"
            android:visibility="gone"
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">
            <TextView
                android:layout_width=
                    "0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:text="Calorie :"
                android:textSize="17dp"

                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="0.0"
                android:textSize="17dp"
                android:id="@+id/tvCalorie"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvErCalorie"
            android:text="@string/no_calorie_data"
            android:textColor="@color/red"
            android:visibility="gone"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/pbHealth"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>
